--- a/transform/src/test/resources/transformations/message-trait/webapi.yaml
+++ b/transform/src/test/resources/transformations/message-trait/webapi.yaml
@@ -32,6 +32,6 @@ encodes:
                     name: schema
                     datatype: http://www.w3.org/2001/XMLSchema#string
               displayName: aMessage
-          operationID: something
+          operationId: something
           method: publish
       path: aChannel
