--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -52,14 +52,14 @@ nodeMappings:
       OAuth2: OAuth2Settings
       OAuth1: OAuth1Settings
       APIKey: APIKeySettings
-      Http: HTTPSettings
+      Http: HttpSettings
       OpenID: OpenIDSettings
     
     union:
       - OAuth2Settings
       - OAuth1Settings
       - APIKeySettings
-      - HTTPSettings
+      - HttpSettings
       - OpenIDSettings
     
 
@@ -378,7 +378,7 @@ nodeMappings:
       documentation:
         propertyTerm: core.documentation
         range: CreativeWork
-      XMLSerialization:
+      XmlSerialization:
         propertyTerm: raml-shapes.xmlSerialization
         range: XMLSerializer
       comment:
@@ -425,7 +425,7 @@ nodeMappings:
       maxCount:
         propertyTerm: shacl.maxCount
         range: integer
-      uinqueItems:
+      uniqueItems:
         propertyTerm: raml-shapes.uniqueItems
         range: boolean
       collectionFormat:
@@ -436,6 +436,7 @@ nodeMappings:
   BaseUnit:
     classTerm: doc.Unit
     mapping:
+
       location:
         propertyTerm: doc.location
         range: string
@@ -564,10 +565,6 @@ nodeMappings:
       designLink:
         propertyTerm: doc.design-link-target
         range: link
-      designAnnotations:
-        propertyTerm: doc.designAnnotation
-        range: DomainExtension
-        allowMultiple: true
 
 
   DataNode:
@@ -829,13 +826,13 @@ nodeMappings:
       pattern:
         propertyTerm: shacl.pattern
         range: string
-      min.Length:
+      minLength:
         propertyTerm: shacl.minLength
         range: integer
-      max.Length:
+      maxLength:
         propertyTerm: shacl.maxLength
         range: integer
-      min.Inclusive:
+      minInclusive:
         propertyTerm: shacl.minInclusive
         range: double
       max.Inclusive:
@@ -862,18 +859,6 @@ nodeMappings:
       encodes:
         propertyTerm: doc.encodes
         range: DomainElementUnion
-
-
-  HTTPSettings:
-    classTerm: security.HttpSettings
-    extends: Settings
-    mapping:
-      scheme:
-        propertyTerm: security.scheme
-        range: string
-      bearerFormat:
-        propertyTerm: security.bearerFormat
-        range: string
 
 
   HttpAPIKeySettings:
@@ -915,6 +900,18 @@ nodeMappings:
         range: DataShapesUnion
       bindingVersion:
         propertyTerm: apiBinding.bindingVersion
+        range: string
+
+
+  HttpSettings:
+    classTerm: security.HttpSettings
+    extends: Settings
+    mapping:
+      scheme:
+        propertyTerm: security.scheme
+        range: string
+      bearerFormat:
+        propertyTerm: security.bearerFormat
         range: string
 
 
@@ -1277,7 +1274,7 @@ nodeMappings:
     classTerm: security.OpenIdConnectSettings
     extends: Settings
     mapping:
-      OpenIDConnectURL:
+      openIdConnectUrl:
         propertyTerm: security.openIdConnectUrl
         range: string
       scope:
@@ -1360,7 +1357,7 @@ nodeMappings:
       isAbstract:
         propertyTerm: apiContract.isAbstract
         range: boolean
-      operationID:
+      operationId:
         propertyTerm: apiContract.operationId
         range: string
       designLink:
@@ -1605,10 +1602,10 @@ nodeMappings:
       range:
         propertyTerm: raml-shapes.range
         range: DataShapesUnion
-      min.Count:
+      minCount:
         propertyTerm: shacl.minCount
         range: integer
-      max.Count:
+      maxCount:
         propertyTerm: shacl.maxCount
         range: integer
       patternName:
@@ -1694,13 +1691,13 @@ nodeMappings:
       pattern:
         propertyTerm: shacl.pattern
         range: string
-      min.Length:
+      minLength:
         propertyTerm: shacl.minLength
         range: integer
-      max.Length:
+      maxLength:
         propertyTerm: shacl.maxLength
         range: integer
-      min.Inclusive:
+      minInclusive:
         propertyTerm: shacl.minInclusive
         range: double
       max.Inclusive:
@@ -1997,7 +1994,7 @@ nodeMappings:
       template:
         propertyTerm: apiContract.template
         range: string
-      operationID:
+      operationId:
         propertyTerm: apiContract.operationId
         range: string
       mapping:
