--- a/transform/src/test/resources/transformations/declares/webapi.yaml
+++ b/transform/src/test/resources/transformations/declares/webapi.yaml
@@ -31,7 +31,7 @@ declares:
               value: ft
               dataType: http://www.w3.org/2001/XMLSchema#string
         name: employeeType
-        min.Count: 1
+        minCount: 1
         path: http://a.ml/vocabularies/data#employeeType
       -
         $id: file://transform/src/test/resources/transformations/declares/api.raml#/declarations/types/Employee/property/employeeId
@@ -41,7 +41,7 @@ declares:
           name: employeeId
           datatype: http://www.w3.org/2001/XMLSchema#string
         name: employeeId
-        min.Count: 1
+        minCount: 1
         path: http://a.ml/vocabularies/data#employeeId
     closed: false
 version: 2.1.2
