--- a/transform/src/test/resources/transformations/operation-trait/webapi.yaml
+++ b/transform/src/test/resources/transformations/operation-trait/webapi.yaml
@@ -21,6 +21,6 @@ encodes:
               type: SimpleTrait
               $id: file://transform/src/test/resources/transformations/operation-trait/api.yaml#/web-api/end-points/someChannel/publish/default-operation
               designLink: file://transform/src/test/resources/transformations/operation-trait/api.yaml#/declarations/operationTraits/firstTrait
-          operationID: something
+          operationId: something
           method: publish
       path: someChannel
