--- a/transform/src/test/resources/transformations/simple/webapi.yaml
+++ b/transform/src/test/resources/transformations/simple/webapi.yaml
@@ -15,7 +15,7 @@ declares:
           name: b
           datatype: http://www.w3.org/2001/XMLSchema#integer
         name: b
-        min.Count: 1
+        minCount: 1
         path: http://a.ml/vocabularies/data#b
       -
         $id: file://transform/src/test/resources/transformations/simple/api.raml#/declarations/types/A/property/a
@@ -25,7 +25,7 @@ declares:
           name: a
           datatype: http://www.w3.org/2001/XMLSchema#string
         name: a
-        min.Count: 1
+        minCount: 1
         path: http://a.ml/vocabularies/data#a
     closed: false
 version: 2.1.2
@@ -75,7 +75,7 @@ encodes:
                           name: c
                           datatype: http://www.w3.org/2001/XMLSchema#string
                         name: c
-                        min.Count: 1
+                        minCount: 1
                         path: http://a.ml/vocabularies/data#c
                     closed: false
                   mediaType: application/json
