--- a/vocabulary/src/main/resources/vocabularies/security.yaml
+++ b/vocabulary/src/main/resources/vocabularies/security.yaml
@@ -6,44 +6,44 @@ uses:
   data: data_model.yaml
 classTerms:
   ApiKeySettings:
-    displayName: API Key Settings
+    displayName: APIKeySettings
     description: Settings for an API Key security scheme
     extends: Settings
   HttpApiKeySettings:
-    displayName: Http API Key Settings
+    displayName: HttpAPIKeySettings
     description: Settings for an Http API Key security scheme
     extends: Settings
   HttpSettings:
-    displayName: HTTP Settings
+    displayName: HttpSettings
     description: Settings for an HTTP security scheme
     extends: Settings
   OAuth1Settings:
-    displayName: OAuth1 Settings
+    displayName: OAuth1Settings
     description: Settings for an OAuth1 security scheme
     extends: Settings
   OAuth2Flow:
-    displayName: OAuth2 Flow
+    displayName: OAuth2Flow
     description: Flow for an OAuth2 security scheme setting
   OAuth2Settings:
-    displayName: OAuth2 Settings
+    displayName: OAuth2Settings
     description: Settings for an OAuth2 security scheme
     extends: Settings
   OpenIdConnectSettings:
-    displayName: OpenID Settings
+    displayName: OpenIDSettings
     description: Settings for an OpenID security scheme
     extends: Settings
   ParametrizedSecurityScheme:
-    displayName: Parametrized Security Scheme
+    displayName: ParametrizedSecurityScheme
   Scope:
     displayName: Scope
   SecurityRequirement:
-    displayName: Security Requirement
+    displayName: SecurityRequirement
     description: Flow for an OAuth2 security scheme setting
   SecurityScheme:
-    displayName: Security Scheme
+    displayName: SecurityScheme
     description: Authentication and access control mechanism defined in an API
   SecuritySchemeFragment:
-    displayName: Security Scheme Fragment
+    displayName: SecuritySchemeFragment
     description: Fragment encoding a RAML security scheme
     extends:
       - doc.Fragment
@@ -53,19 +53,19 @@ classTerms:
     description: Settings for a security scheme
 propertyTerms:
   accessTokenUri:
-    displayName: access token URI
+    displayName: accessTokenURI
     range: string
   additionalProperties:
-    displayName: additional properties
+    displayName: additionalProperties
     range: data.Node
   authorizationGrant:
-    displayName: authorization grant
+    displayName: authorizationGrant
     range: string
   authorizationUri:
-    displayName: authorization URI
+    displayName: authorizationURI
     range: string
   bearerFormat:
-    displayName: bearer format
+    displayName: bearerFormat
     range: string
   flow:
     displayName: flow
@@ -77,13 +77,13 @@ propertyTerms:
     displayName: in
     range: string
   openIdConnectUrl:
-    displayName: OpenID connect URL
+    displayName: openIdConnectUrl
     range: string
   refreshUri:
-    displayName: refresh URI
+    displayName: refreshURI
     range: string
   requestTokenUri:
-    displayName: request token URI
+    displayName: requestTokenURI
     range: string
   scheme:
     displayName: scheme
@@ -106,7 +106,7 @@ propertyTerms:
     displayName: signature
     range: string
   tokenCredentialsUri:
-    displayName: token credentials URI
+    displayName: tokenCredentialsURI
     range: string
   type:
     displayName: type
