--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -431,6 +431,15 @@ nodeMappings:
       collectionFormat:
         propertyTerm: raml-shapes.collectionFormat
         range: string
+      unevaluatedItems:
+        propertyTerm: raml-shapes.unevaluatedItems
+        range: DataShapesUnion
+      qualifiedMinCount:
+        propertyTerm: shacl.qualifiedMinCount
+        range: integer
+      qualifiedMaxCount:
+        propertyTerm: shacl.qualifiedMaxCount
+        range: integer
 
 
   BaseUnit:
@@ -1200,6 +1209,9 @@ nodeMappings:
         propertyTerm: raml-shapes.dependencies
         range: PropertyDependencies
         allowMultiple: true
+      unevaluatedProperties:
+        propertyTerm: raml-shapes.unevaluatedProperties
+        range: DataShapesUnion
 
 
   OAuth1Settings:
@@ -1577,6 +1589,9 @@ nodeMappings:
         propertyTerm: raml-shapes.propertyTarget
         range: link
         allowMultiple: true
+      propertyAppliedShape:
+        propertyTerm: raml-shapes.propertyAppliedShape
+        range: DataShapesUnion
       designAnnotations:
         propertyTerm: doc.designAnnotation
         range: DomainExtension
@@ -1688,6 +1703,15 @@ nodeMappings:
       datatype:
         propertyTerm: shacl.datatype
         range: link
+      encoding:
+        propertyTerm: raml-shapes.encoding
+        range: string
+      mediaType:
+        propertyTerm: raml-shapes.mediaType
+        range: string
+      contentSchema:
+        propertyTerm: raml-shapes.contentSchema
+        range: DataShapesUnion
       pattern:
         propertyTerm: shacl.pattern
         range: string
