APIMF-2579: headerExamples field in MessageModel

--- a/transform/src/test/resources/specs/async20/message-obj.yaml
+++ b/transform/src/test/resources/specs/async20/message-obj.yaml
@@ -36,5 +36,5 @@ channels:
           url: http://www.google.com
         examples:
           - {
-            "key": "value"
+            "payload": "value"
           }
