--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -1046,6 +1046,10 @@ nodeMappings:
       isAbstract:
         propertyTerm: apiContract.isAbstract
         range: boolean
+      headerExamples:
+        propertyTerm: apiContract.headerExamples
+        range: Example
+        allowMultiple: true
       designLink:
         propertyTerm: doc.design-link-target
         range: link
